@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.3</version>
+        <version>3.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.darkmusic</groupId>
@@ -30,6 +30,7 @@
     <properties>
         <java.version>23</java.version>
         <spring-ai.version>1.0.0-M6</spring-ai.version>
+        <surefire.plugin.version>3.5.2</surefire.plugin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -70,6 +71,11 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>4.30.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-spring-boot-docker-compose</artifactId>
             <scope>runtime</scope>
@@ -107,9 +113,14 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.iq80.snappy</groupId>
+            <artifactId>snappy</artifactId>
+            <version>0.5</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-archiver</artifactId>
-            <version>3.6.0</version>
+            <version>4.0.0-beta-1</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -143,7 +154,20 @@
                     </annotationProcessorPaths>
                     <source>23</source>
                     <target>23</target>
+                    <release>23</release>
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test*.java</include>
+                    </includes>
+                    <reuseForks>true</reuseForks>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
